--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,14 @@
     android:orientation="vertical"
     tools:context="com.blacktea.ztine.learnmyblog.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <include layout="@layout/activity_toolbar" />
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/main_drawer"
+        android:layout_height="match_parent"
+        android:layout_weight="match_parent">
+
+    </android.support.v4.widget.DrawerLayout>
+
+
 </LinearLayout>
