--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.blacktea.ztine.learnmyblog.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <include
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        layout="@layout/frament_bloglist"
+        android:layout_gravity="left|top" />
 </FrameLayout>
